# que-hijo-de-buda

./: README.md  constants.py  emotions.py  face_recognition.py  logger.py  main.py  multimedia_handler.py  pyproject.toml  save_process_video.py  time_modifiers.py  video_analysis.py  youtube_downloader.py
analysis/: emotions.py  face_recognition.py  topic.py  video_analysis.py
dataset/milei/: ds_model_arcface_detector_opencv_aligned_normalization_base_expand_0.pkl
resources/dataset/milei/: ds_model_arcface_detector_opencv_aligned_normalization_base_expand_0.pkl  ds_model_vggface_detector_mtcnn_aligned_normalization_base_expand_0.pkl
utils/: multimedia_handler.py  time_modifiers.py
