[tool.poetry]
name = "que-hijos-de-diputados"
version = "0.1.0"
description = "Reconocimiento facial en videos de youtube"
authors = ["Ezequiel Gresia"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2025.2.19"
logging = "^0.4.9.6"
numpy = ">=1.26.0, <2.2.0"
opencv-python = "^4.11.0.86"
tensorflow = "^2.18.0"
