[tool.poetry]
name = "que-hijos-de-diputados"
version = "0.1.0"
description = "Reconocimiento facial en videos de youtube"
authors = ["Ezequiel Gresia"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.11.0.86"
facenet-pytorch = "^2.6.0"
yt-dlp = "^2025.2.19"
numpy = "^1.24.0"
deepface = "^0.0.93"
tensorflow = "2.18.0"
tf-keras = "2.18.0"
moviepy = "^2.1.2"
argparse = "^1.4.0"
